--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -162,7 +162,7 @@ h1 {
 	color: #b1663c;
 }
 
-h1 > span {
+h1>span {
 	font-family: "Work Sans";
 	font-size: 10px;
 	letter-spacing: 0.1em;
@@ -273,7 +273,7 @@ li:hover {
 	margin: auto;
 }
 
-#contact > * {
+#contact>* {
 	text-align: center;
 }
 
@@ -304,6 +304,7 @@ li:hover {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
+
 input[type="submit"] {
 	font-family: "Syne";
 	font-weight: 700;
@@ -320,3 +321,141 @@ footer nav ul {
 	justify-content: flex-end;
 	margin: 2em;
 }
+
+
+/*homePageEdit*/
+.mesProjets {
+	display: flex;
+	justify-content: center;
+	align-items: baseline;
+	gap: 25px;
+}
+
+.mesProjets button {
+	display: flex;
+	gap: 5px;
+	font-size: 16px;
+	border: none;
+	background: white;
+	color: black;
+	font-weight: 400;
+	cursor: pointer;
+}
+
+
+
+
+.modal-container {
+	/* display: none; */
+	visibility: hidden;
+	position: fixed;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	transition: visibility 0.4s;
+}
+
+.modal-container.active {
+	/* display: block; */
+	visibility: visible;
+}
+
+.overlay {
+	opacity: 1;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: #333333d3;
+	transition: opacity 0.4s 0.2s ease-out;
+}
+
+.modal-container.active .overlay {
+	opacity: 1;
+	transition: opacity 0.4s ease-out;
+}
+
+.modal {
+	opacity: 0;
+	width: 100%;
+	max-width: 360px;
+	min-width: 200px;
+	padding: 40px;
+	background: #fff;
+	border-radius: 5px;
+	position: absolute;
+	top: 40%;
+	left: 50%;
+
+	transform: translate(-50%, calc(-50% - 50px));
+	transition: opacity 0.4s ease-out;
+	transform: 0.4s ease-out;
+}
+
+.modal-container.active {
+	background: none;
+}
+
+.modal-container.active .modal {
+	opacity: 1;
+	transform: translate(-50%, -50%);
+	transition: opacity 0.4s 0.2s ease-out;
+	transform: 0.4s 0.2s ease-out;
+}
+
+.close-modal {
+	padding: 8px 10px;
+	border: none;
+	border-radius: 5px;
+	font-size: 18px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+	background: #ff365e;
+	color: #fff;
+}
+
+.modal h1 {
+	color: black;
+	margin: 20px 0px 30px 110px;
+	font-family: Montserrat, sans-serif;
+	font-weight: 500;
+}
+
+.gallery {
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-column-gap: 0px;
+	grid-row-gap: 30px;
+}
+
+.gallery figure {
+	width: 50px;
+	height: 50px;
+}
+
+.gallery figcaption {
+	display: none;
+	width: 0;
+	height: 0;
+}
+
+.btnModalAjout {
+	width: 200px;
+	height: 25px;
+	margin: 50px 85px 30px 85px;
+	color: white;
+	background: #1d6154;
+	border: none;
+	border-radius: 20px;
+}
+
+/*logout*/
+.loginPage a {
+	color: black;
+	cursor: pointer;
+}
+
+
+
+
+/*login*/
