save for modal for trash

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -401,12 +401,9 @@ footer nav ul {
 	font-weight: 400;
 	cursor: pointer;
 }
-
-
-
-
+/*
 .modal-container {
-	/* display: none; */
+                  display: none; 
 	visibility: hidden;
 	position: fixed;
 	top: 0;
@@ -416,7 +413,7 @@ footer nav ul {
 }
 
 .modal-container.active {
-	/* display: block; */
+	                       display: block; 
 	visibility: visible;
 }
 
@@ -435,7 +432,7 @@ footer nav ul {
 }
 
 .modal {
-	opacity: 1;
+	opacity: 0;
 	width: 370px;
 	max-width: 360px;
 	min-width: 200px;
@@ -523,6 +520,9 @@ footer nav ul {
 	border: none;
 	border-radius: 20px;
 }
+*/
+
+
 
 /*logout*/
 .loginForm a {
@@ -547,4 +547,117 @@ footer nav ul {
 }
 
 
+/* The Modal (background) */
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 60px; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%;
+  overflow: auto; 
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
 
+#galleryModale  {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-column-gap: 0;
+	grid-row-gap: 10px;
+	margin-bottom: 40px;
+	max-width: 500px;
+	justify-items: center;
+}
+
+#galleryModale .figure {
+	display: flex;
+	width: 60px;
+}
+
+#galleryModale .figure span i {
+	position: absolute;
+	width: 10px;
+	height: 10px;
+	color: black;
+}
+
+
+
+
+
+#galleryModale img {
+	width: 60px;
+}
+
+
+#myBtn {
+	width: 100px;
+	height: 25px;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: white;
+  margin: auto;
+  padding: 20px;
+	top: 0;
+  border: 1px solid #888;
+  width: 80%;
+	max-width: 450px;
+	height: auto;
+}
+
+.modal-content h2 {
+	margin: auto;
+}
+
+/* The Close Button */
+.close {
+	float: right;
+	color: #fff;
+	display: flex;
+	justify-content: end;
+	align-items: center;
+	padding: 8px 10px;
+	border: none;
+	border-radius: 5px;
+	font-size: 26px;
+	cursor: pointer;
+	color: black;
+	font-weight: 500;
+}
+
+.close:hover,
+.close:focus {
+  color: white;
+	background-color: rgb(184, 182, 182);
+  text-decoration: none;
+  cursor: pointer;
+	font-weight: 600;
+}
+
+.btnModalAjout {
+	width: 200px;
+	height: 25px;
+	display: flex;
+	justify-content: center;
+	margin: auto;
+	align-items: center;
+	color: white;
+	background: #1d6154;
+	border: none;
+	border-radius: 20px;
+}
+
+.line {
+	margin: auto;
+	margin-bottom: 30px;
+	margin-top: 60px;
+	width: 90%;
+	height: 2px;
+	border-radius: 10px;
+	background: rgb(221, 216, 216);
+}
