--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -555,7 +555,7 @@ footer nav ul {
 
 .addImgModale {
 	background: #E8F1F6;
-	width: auto;
+	width: 100%;
 	height: 120px;
 	display: flex;
 	flex-direction: column;
