--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -138,8 +138,8 @@ table {
 /** end reset css**/
 body {
 	max-width: 1140px;
-	margin: auto;
-	font-family: "Work Sans";
+	margin:auto;
+	font-family: 'Work Sans' ;
 	font-size: 14px;
 }
 
@@ -160,12 +160,31 @@ h1 {
 	font-size: 22px;
 	font-weight: 800;
 	color: #b1663c;
+	margin-left: 11vh;
 }
 
 h1>span {
 	font-family: "Work Sans";
 	font-size: 10px;
 	letter-spacing: 0.1em;
+}
+
+.elementH2 {
+	display: flex;
+	flex-direction: row-reverse;
+	gap: 20px;
+	margin: 40px;
+
+	#myBtn {
+		background: #fff;
+		border: none;
+		margin-top: 5px;
+
+	}
+
+	.fa-pen-to-square {
+		font-size: 10px;
+	}
 }
 
 h2 {
@@ -179,11 +198,19 @@ main .mainLogin {
 	background: #FFFEF8;
 }
 
+#loginForm {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 section {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-right: 11vh;
+	margin-left: 11vh;
 }
 
 .conect {
@@ -202,13 +229,18 @@ section {
 }
 
 .btnConect {
+	display: flex;
+
+	align-items: center;
+	justify-content: center;
 	width: 179px;
 	height: 36px;
+	border: 1px solid #1d6154;
 	border-radius: 60px;
 	color: white;
 	background: #1d6154;
-	-webkit-box-shadow: 5px 3px 7px -2px rgba(0,0,0,0.88); 
-	box-shadow: 5px 3px 7px -2px rgba(0,0,0,0.88);
+	-webkit-box-shadow: 5px 3px 7px -2px rgba(0, 0, 0, 0.88);
+	box-shadow: 5px 3px 7px -2px rgba(0, 0, 0, 0.88);
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	transition: 500ms;
@@ -223,14 +255,22 @@ section {
 }
 
 a {
-	text-decoration:none;
+	text-decoration: none;
 	color: inherit;
 }
 
 .mpOublie {
-	width: 139px;
+	width: 170px;
 	height: 16px;
-	text-decoration:underline;
+	text-decoration: underline;
+}
+
+article {
+	margin-right: 11vh;
+}
+
+nav {
+	margin-right: 11vh;
 }
 
 nav ul {
@@ -251,6 +291,7 @@ a:hover {
 
 #introduction {
 	display: flex;
+	flex-direction: row;
 	align-items: center;
 }
 
@@ -260,13 +301,18 @@ a:hover {
 
 #introduction img {
 	display: block;
-	margin: auto;
-	width: 80%;
+	/*margin: auto;*/
+	width: 100%;
 }
 
 #introduction article {
 	flex: 1;
+	width: 404px;
+	font-size: 14px;
+	margin: 60px;
 }
+
+
 
 #introduction h2 {
 	margin-bottom: 1em;
@@ -297,8 +343,8 @@ a:hover {
 	border-radius: 60px;
 	border: 1px;
 	text-align: center;
-	padding: 60px;
-	
+	padding: 0 60px 60px 60px;
+
 }
 
 .btn {
@@ -331,10 +377,14 @@ a:hover {
 #contact {
 	width: 50%;
 	margin: auto;
+	
+
+	
 }
 
 #contact>* {
 	text-align: center;
+
 }
 
 #contact h2 {
@@ -365,7 +415,7 @@ a:hover {
 }
 
 
-input[type="submit"] {
+.btnSubmitValider {
 	font-family: "Syne";
 	font-weight: 700;
 	color: white;
@@ -374,7 +424,18 @@ input[type="submit"] {
 	width: 180px;
 	text-align: center;
 	border-radius: 60px;
+
 }
+
+.line2 {
+
+	padding: 10px 0;
+
+
+	height: 2px;
+
+}
+
 
 footer nav ul {
 	display: flex;
@@ -416,55 +477,87 @@ footer nav ul {
 
 .conected {
 	display: flex;
+	justify-content: center;
 	align-items: center;
 	background: black;
 	color: white;
 	position: fixed;
 	top: 0;
 	width: 100%;
-	height: 25px;
+	max-width: 1140px;
+	margin: 0;
+	height: 35px;
+	font-size: 16px;
+}
+
+.fa-pen-to-square {
+	margin-right: 1vh;
+}
+
+.mpOublie {
+	width: 170px;
 }
 
 
 /* The Modal (background) */
 .modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
-  padding-top: 60px; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%;
-  overflow: auto; 
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 60px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.4);
 }
 
-#galleryModale  {
+#galleryModale {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	grid-column-gap: 0;
-	grid-row-gap: 10px;
+	grid-column-gap: 1px;
+	grid-row-gap: 15px;
 	margin-bottom: 40px;
 	max-width: 500px;
 	justify-items: center;
+	align-items: center
+
 }
 
 #galleryModale .figureModal {
 	display: flex;
 	width: 180px;
 	flex-direction: row-reverse;
-	
+
 }
+
+.fa-image {
+	font-size: 55px;
+	opacity: 0.4;
+}
+
+.btnAddClass {
+	width: 173px;
+	height: 36px;
+	border-radius: 20px;
+	border: 1px solid grey;
+	background: #dfd9d9;
+
+}
+
+
 
 #galleryModale span {
 	position: absolute;
 	color: white;
 	background: black;
-	font-size: 10px;
-	margin: 4px;
-	padding: 3px;
+	font-size: 8px;
+	margin-left: 46px;
+	margin-top: 4px;
+	padding: 2px;
+	cursor: pointer;
 }
 
 /* Style de la corbeille */
@@ -485,67 +578,92 @@ footer nav ul {
 
 /* Modal Content */
 .modal-content {
-  background-color: white;
-  margin: auto;
-  padding: 40px;
+	background-color: white;
+	margin: auto;
+
+	padding: 30px 60px;
 	top: 0;
-  border: 1px solid #888;
-  width: 60%;
+	border: 1px solid #888;
+	width: 50%;
 	max-width: 450px;
 	height: auto;
+	border-radius: 10px;
 }
 
 .modal-content h2 {
 	margin: auto;
 }
 
+.addElementPreview img {
+	width: 150px;
+	height: 169px;
+}
+
 /* The Close Button */
-.close {
+.btnCloseModal {
+	width: 21px;
+	height: 21px;
 	float: right;
 	color: #fff;
 	display: flex;
 	justify-content: end;
 	align-items: center;
-	padding: 8px 10px;
+	padding: 5px 5px;
 	border: none;
 	border-radius: 5px;
-	font-size: 26px;
+	font-size: 30px;
 	cursor: pointer;
 	color: black;
-	font-weight: 500;
+	font-weight: bold;
+	margin-top: -25px;
+	margin-right: -25px;
 }
 
-.back {
+.spans {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-direction: row-reverse;
+}
+
+.spanModalBack {
+	width: 21px;
+	height: 21px;
 	float: left;
-	color: #fff;
+	color: black;
 	display: flex;
 	justify-content: start;
 	align-items: center;
-	padding: 8px 10px;
+	padding: 8px 8px;
 	border: none;
 	border-radius: 5px;
-	font-size: 26px;
+	font-size: 35px;
 	cursor: pointer;
 	color: black;
-	font-weight: 500;
+	font-weight: 900;
+	margin-top: -20px;
+	margin-left: -30px;
+
 }
 
-.close:hover,
-.close:focus {
-  color: white;
+.spanModal:hover,
+.spanModal:focus {
+	color: white;
 	background-color: rgb(184, 182, 182);
-  text-decoration: none;
-  cursor: pointer;
-	font-weight: 600;
+	text-decoration: none;
+	cursor: pointer;
+	font-weight: bold;
 }
 
-.back:hover,
-.back:focus {
-  color: white;
+.spanModalBack:hover,
+.spanModalBack:focus {
+	color: white;
 	background-color: rgb(184, 182, 182);
-  text-decoration: none;
-  cursor: pointer;
-	font-weight: 600;
+	text-decoration: none;
+	cursor: pointer;
+	font-weight: bold;
+
 }
 
 
@@ -555,22 +673,73 @@ footer nav ul {
 
 .addImgModale {
 	background: #E8F1F6;
-	width: 100%;
-	height: 120px;
+	width: auto;
+	max-width: 420px;
+	height: 169px;
+	max-height: 650px;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-evenly;
 }
 
+
+.classTitleCat {
+	margin-top: 20px;
+	margin-bottom: 10px;
+	font-size: 14px;
+	font-weight: 500;
+}
+
+.inputTitleCat {
+	margin-top: 5px;
+	margin: 3px;
+	width: 420px;
+	height: 51px;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);	border: none;
+
+}
+
+.elementHr hr {
+	display: flex;
+	width: 85%;
+	margin-top: 40px;
+}
+
+.btnSubmitValider {
+	width: 200px;
+	height: 30px;
+	border: none;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 0px;
+}
+
+
+
+
 #photoForm {
 	display: flex;
 	flex-direction: column;
+margin-bottom: 0;
+}
+
+.btnSubmitValider {
+	background-color: #888;
+	color: #fff;
+}
+
+.btnSubmitValider.formulaire-rempli {
+	background-color: #1d6154;
 }
 
 .btnModalAjout {
 	width: 200px;
-	height: 25px;
+	height: 30px;
 	display: flex;
 	justify-content: center;
 	margin: auto;
@@ -580,6 +749,15 @@ footer nav ul {
 	border: none;
 	border-radius: 20px;
 }
+
+.pModaleDiv {
+
+	color: #444444;
+	display: flex;
+	justify-content: end;
+
+}
+
 .line {
 	margin: auto;
 	margin-bottom: 30px;
