--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -773,3 +773,109 @@ margin-bottom: 0;
 	border-radius: 10px;
 	background: rgb(221, 216, 216);
 }
+
+
+.afficheModal{
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 999;
+	width: 50%;
+	height: calc(90% - 20px);
+	background: #f2f2f2;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	padding: 20px;
+  }
+  .modal-content {
+	width: 50%;
+	background-color: #1d6154;
+  }
+
+
+  .modal-title {
+	font-size: 1.5rem;
+	margin-bottom: 10px;
+  }
+  
+  .modal-text {
+	margin-bottom: 20px;
+  }
+  
+  .modal-input {
+	width: 100%;
+	padding: 10px;
+	margin-bottom: 15px;
+	box-sizing: border-box;
+  }
+  
+  .next-btn,
+  .previous-btn,
+  .close-btn {
+	background-color: #007bff;
+	color: #fff;
+	padding: 10px 15px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	font-size: 1rem;
+	margin-right: 10px;
+  }
+  
+  .close-btn {
+	background-color: #dc3545;
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin:0;
+  }
+  
+  .close-btn:hover{
+	background-color: darken(#dc3545, 30);
+  }
+
+  .next-btn,
+  .previous-btn {
+	background-color: #0056b3;
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin:0;
+
+  }
+  
+  .next-btn:hover,
+  .previous-btn:hover {
+	background-color: #0056b3;
+
+
+  }
+  
+  /* Hide the file input button text */
+  input[type="file"] {
+	font-size: 1em;
+	position: relative;
+	width: 90%;
+  }
+  
+  /* Style the file input button */
+  input[type="file"]::before {
+	content: "Choose File";
+	display: flex;
+	position: absolute;
+	left: 0;
+	width: 100%;
+	background: #007bff;
+	color: #fff;
+	padding: 8px 12px;
+	border-radius: 5px;
+	cursor: pointer;
+  }
+  
+  input[type="file"]:hover::before {
+	background: #0056b3;
+  }
