--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -138,8 +138,8 @@ table {
 /** end reset css**/
 body {
 	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
+	margin: auto;
+	font-family: 'Work Sans';
 	font-size: 14px;
 }
 
@@ -378,9 +378,9 @@ a:hover {
 #contact {
 	width: 50%;
 	margin: auto;
-	
 
-	
+
+
 }
 
 #contact>* {
@@ -524,7 +524,6 @@ footer nav ul {
 	max-width: 500px;
 	justify-items: center;
 	align-items: center
-
 }
 
 #galleryModale .figureModal {
@@ -702,7 +701,8 @@ footer nav ul {
 	max-width: 420px;
 	height: 51px;
 	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	border: none;
 
 }
 
@@ -730,7 +730,7 @@ footer nav ul {
 #photoForm {
 	display: flex;
 	flex-direction: column;
-margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 .btnSubmitValider {
@@ -775,7 +775,7 @@ margin-bottom: 0;
 }
 
 
-.afficheModal{
+.afficheModal {
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -790,32 +790,34 @@ margin-bottom: 0;
 	border-radius: 10px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 	padding: 20px;
-  }
-  .modal-content {
-	width: 60%;
-	min-height: 80%;
-  }
+}
+
+.modal-content {
+	width: 70%;
+	min-height: 60%;
+	background: #dfd9d9;
+}
 
 
-  .modal-title {
+.modal-title {
 	display: flex;
 	justify-content: center;
 	font-size: 2rem;
 	margin-bottom: 40px;
-  }
-  
+}
 
-  
-  .modal-input {
+
+
+.modal-input {
 	width: 100%;
 	padding: 10px;
 	margin-bottom: 15px;
 	box-sizing: border-box;
-  }
-  
-  .next-btn,
-  .previous-btn,
-  .close-btn {
+}
+
+.next-btn,
+.previous-btn,
+.close-btn {
 	background-color: #007bff;
 	color: #fff;
 	padding: 10px 15px;
@@ -824,58 +826,148 @@ margin-bottom: 0;
 	cursor: pointer;
 	font-size: 1rem;
 	margin-right: 10px;
-  }
-  
-  .close-btn {
+}
+
+.close-btn {
 	background-color: #dc3545;
 	position: absolute;
-	top: 0;
-	right: 0;
-	margin:0;
-  }
-  
-  .close-btn:hover{
-	background-color: darken(#dc3545, 30);
-  }
+	top: 30px;
+	right: 55px;
+	margin: 0;
+}
 
-  .next-btn,
-  .previous-btn {
+.close-btn:hover {
+	background-color: darken(#dc3545, 30);
+}
+
+.next-btn,
+.previous-btn {
 	background-color: #0056b3;
 	position: absolute;
-	top: 0;
-	left: 0;
-	margin:0;
+	top: 30px;
+	left: 55px;
+	margin: 0;
 
-  }
-  
-  .next-btn:hover,
-  .previous-btn:hover {
+}
+
+.next-btn:hover,
+.previous-btn:hover {
 	background-color: #0056b3;
 
 
-  }
-  
-  /* Hide the file input button text */
-  input[type="file"] {
+}
+
+/* Hide the file input button text */
+input[type="file"] {
 	font-size: 1em;
 	position: relative;
-	width: 90%;
-  }
-  
-  /* Style the file input button */
-  input[type="file"]::before {
-	content: "Choose File";
+}
+
+/* Style the file input button */
+input[type="file"]::before {
+	content: "+ Ajouter une photo";
 	display: flex;
+	justify-content: center;
+	align-items: center;
 	position: absolute;
-	left: 0;
-	width: 100%;
-	background: #007bff;
-	color: #fff;
-	padding: 8px 12px;
-	border-radius: 5px;
+	width: 180px;
+	height: 40px;
+	background: #e2e1db;
+	color: #007bff;
 	cursor: pointer;
-  }
-  
-  input[type="file"]:hover::before {
-	background: #0056b3;
-  }
+	font-size: 1.1em;
+}
+
+input[type="file"]:hover::before {
+	font-size: 1.2em;
+}
+
+
+.modalInputFile {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	width: 100%;
+	height: 180px;
+	border: 1px solid black;
+	background: rgba(232, 241, 246, 1);
+	border-radius: 5px;
+	margin-bottom: 20px;
+}
+
+.btnAddClass {
+	width: 173px;
+	height: 36px;
+	border-radius: 50px;
+
+	background: rgba(255, 255, 255, 1);
+	cursor: pointer;
+}
+
+.fa-image {
+	font-size: 65px;
+	opacity: 0.2;
+}
+
+.modalText {
+	font-size: 13px;
+	opacity: 0.6;
+}
+
+.modal-input {
+	width: 100%;
+	padding: 10px;
+	margin-bottom: 15px;
+	box-sizing: border-box;
+}
+
+.modal-input::placeholder {
+	color: #aaa;
+}
+
+.modal-input {
+	width: 100%;
+	height: 50px;
+	font-size: 1.2em;
+}
+
+.elementSubmit {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.modalBtvValider {
+	width: 200px;
+	height: 40px;
+	border: none;
+	cursor: pointer;
+	background: #1d6154;
+	color: white;
+	border-radius: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 0px;
+	cursor: pointer;
+}
+
+.elementNewImgInModal {
+	width: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+	border: 1px solid;
+	padding: 30px;
+}
+
+.newImgInModal {
+	width: 80px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
