save manque fonction opacity

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -230,7 +230,6 @@ section {
 
 .btnConect {
 	display: flex;
-
 	align-items: center;
 	justify-content: center;
 	width: 179px;
@@ -313,8 +312,6 @@ a:hover {
 	margin: 60px;
 }
 
-
-
 #introduction h2 {
 	margin-bottom: 1em;
 }
@@ -345,7 +342,6 @@ a:hover {
 	border: 1px;
 	text-align: center;
 	padding: 0 60px 60px 60px;
-
 }
 
 .btn {
@@ -356,7 +352,6 @@ a:hover {
 	border-radius: 60px;
 	border: 1px solid #1d6154;
 	color: #1d6154;
-
 	font-family: Syne;
 	font-size: 16px;
 	font-weight: 700;
@@ -378,14 +373,10 @@ a:hover {
 #contact {
 	width: 50%;
 	margin: auto;
-
-
-
 }
 
 #contact>* {
 	text-align: center;
-
 }
 
 #contact h2 {
@@ -429,21 +420,15 @@ a:hover {
 }
 
 .line2 {
-
 	padding: 10px 0;
-
-
 	height: 2px;
-
 }
-
 
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
 	margin: 2em;
 }
-
 
 /*homePageEdit*/
 .mesProjets {
@@ -464,18 +449,13 @@ footer nav ul {
 	cursor: pointer;
 }
 
-
 /*logout*/
 .loginForm a {
 	color: black;
 	cursor: pointer;
 }
 
-
-
-
 /*login*/
-
 .conected {
 	display: flex;
 	justify-content: center;
@@ -499,7 +479,6 @@ footer nav ul {
 	width: 170px;
 }
 
-
 /* The Modal (background) */
 .modal {
 	display: none;
@@ -514,6 +493,7 @@ footer nav ul {
 	background-color: rgb(0, 0, 0);
 	background-color: rgba(0, 0, 0, 0.4);
 }
+
 
 #galleryModale {
 	display: grid;
@@ -530,7 +510,6 @@ footer nav ul {
 	display: flex;
 	width: 180px;
 	flex-direction: row-reverse;
-
 }
 
 .fa-image {
@@ -538,30 +517,26 @@ footer nav ul {
 	opacity: 0.4;
 }
 
-
-
-
 #galleryModale span {
 	position: absolute;
 	color: white;
 	background: black;
 	font-size: 8px;
-	margin-left: 46px;
-	margin-top: 4px;
+	margin-left: 62px;
+	margin-top: 9px;
 	padding: 2px;
 	cursor: pointer;
 }
-
-/* Style de la corbeille */
-
-
-
-
-
-#galleryModale img {
-	width: 60px;
+.fa-trash-can {
+	font-size: 10px;;
+	cursor: pointer;
 }
 
+#galleryModale img {
+	width: 75px;
+	margin: 4px;
+	
+}
 
 #myBtn {
 	width: 100px;
@@ -571,16 +546,12 @@ footer nav ul {
 
 /* Modal Content */
 .modal-content {
-	background-color: white;
 	margin: auto;
-
 	padding: 30px 60px;
 	top: 0;
-	border: 1px solid #888;
-	width: 50%;
-	max-width: 450px;
+	width: 100%;
 	height: auto;
-	border-radius: 10px;
+	min-height: 350px;
 }
 
 .modal-content h2 {
@@ -593,85 +564,14 @@ footer nav ul {
 	margin-bottom: 90px;
 }
 
-/* The Close Button */
-.btnCloseModal {
-	width: 21px;
-	height: 21px;
-	float: right;
-	color: #fff;
-	display: flex;
-	justify-content: end;
-	align-items: center;
-	padding: 5px 5px;
-	border: none;
-	border-radius: 5px;
-	font-size: 30px;
-	cursor: pointer;
-	color: black;
-	font-weight: bold;
-	margin-top: -25px;
-	margin-right: -25px;
-}
-
-.spans {
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	flex-direction: row-reverse;
-}
-
-.spanModalBack {
-	width: 21px;
-	height: 21px;
-	float: left;
-	color: black;
-	display: flex;
-	justify-content: start;
-	align-items: center;
-	padding: 8px 8px;
-	border: none;
-	border-radius: 5px;
-	font-size: 35px;
-	cursor: pointer;
-	color: black;
-	font-weight: 900;
-	margin-top: -20px;
-	margin-left: -30px;
-
-}
-
-.spanModal:hover,
-.spanModal:focus {
-	color: white;
-	background-color: rgb(184, 182, 182);
-	text-decoration: none;
-	cursor: pointer;
-	font-weight: bold;
-}
-
-.spanModalBack:hover,
-.spanModalBack:focus {
-	color: white;
-	background-color: rgb(184, 182, 182);
-	text-decoration: none;
-	cursor: pointer;
-	font-weight: bold;
-
-}
-
-
-
 
 /* Parti modale ajout photo*/
-
 .addImgModale {
 	background: #E8F1F6;
 	width: auto;
 	max-width: 420px;
 	height: 169px;
 	max-height: 650px;
-
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -695,10 +595,15 @@ footer nav ul {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	border: none;
-
 }
 
-.elementHr hr {
+hr .elementHr2 {
+	display: flex;
+	width: 85%;
+	margin-top: 40px;
+}
+
+hr .elementHr {
 	display: flex;
 	width: 85%;
 	margin-top: 40px;
@@ -714,15 +619,6 @@ footer nav ul {
 	justify-content: center;
 	margin-bottom: 0px;
 	cursor: pointer;
-}
-
-
-
-
-#photoForm {
-	display: flex;
-	flex-direction: column;
-	margin-bottom: 0;
 }
 
 .btnSubmitValider {
@@ -746,26 +642,14 @@ footer nav ul {
 	border: none;
 	border-radius: 60px;
 	cursor: pointer;
+	margin-top: 25px;
 }
 
 .pModaleDiv {
-
 	color: #444444;
 	display: flex;
 	justify-content: end;
-
 }
-
-.line {
-	margin: auto;
-	margin-bottom: 30px;
-	margin-top: 60px;
-	width: 90%;
-	height: 2px;
-	border-radius: 10px;
-	background: rgb(221, 216, 216);
-}
-
 
 .afficheModal {
 	position: fixed;
@@ -773,9 +657,8 @@ footer nav ul {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 999;
-	width:500px;
+	width: 500px;
 	height: auto;
-	/*height: calc(90% - 20px);*/
 	background: #f2f2f2;
 	display: flex;
 	justify-content: center;
@@ -785,12 +668,6 @@ footer nav ul {
 	padding: 20px;
 }
 
-.modal-content {
-	width: 70%;
-	min-height: 500px;
-	background: #f2f2f2;
-}
-
 
 .modal-title {
 	display: flex;
@@ -798,8 +675,6 @@ footer nav ul {
 	font-size: 2rem;
 	margin-bottom: 40px;
 }
-
-
 
 .modal-input {
 	width: 100%;
@@ -815,46 +690,29 @@ footer nav ul {
 	outline: none;
 }
 
-.next-btn,
 .previous-btn,
 .close-btn {
-	background-color: #007bff;
-	color: #fff;
+	color: black;
 	padding: 10px 15px;
 	border: none;
-	border-radius: 5px;
 	cursor: pointer;
-	font-size: 1rem;
-	margin-right: 10px;
+	font-size: 30px;
+	font-weight: 900;
 }
 
 .close-btn {
-	background-color: #dc3545;
+	font-size: 1.6rem;
 	position: absolute;
-	top: 30px;
-	right: 55px;
+	top: 0px;
+	right: 15px;
 	margin: 0;
 }
 
-.close-btn:hover {
-	background-color: darken(#dc3545, 30);
-}
-
-.next-btn,
 .previous-btn {
-	background-color: #0056b3;
 	position: absolute;
-	top: 30px;
-	left: 55px;
+	top: 0px;
+	left: 15px;
 	margin: 0;
-
-}
-
-.next-btn:hover,
-.previous-btn:hover {
-	background-color: #0056b3;
-
-
 }
 
 /* Hide the file input button text */
@@ -882,7 +740,6 @@ input[type="file"]:hover::before {
 	font-size: 1.2em;
 }
 
-
 .modalInputFile {
 	display: flex;
 	flex-direction: column;
@@ -901,13 +758,9 @@ input[type="file"]:hover::before {
 	width: 173px;
 	height: 36px;
 	border-radius: 60px;
-	border: 1px solid grey;
 	background: #dfd9d9;
 	cursor: pointer;
-
 }
-
-
 
 .fa-image {
 	font-size: 65px;
@@ -919,16 +772,12 @@ input[type="file"]:hover::before {
 	opacity: 0.6;
 }
 
-
-
-
-
 .elementSubmit {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-top: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 0px;
 }
 
 .modalBtvValider {
@@ -936,7 +785,7 @@ input[type="file"]:hover::before {
 	height: 36px;
 	border: none;
 	cursor: pointer;
-	background: #1d6154;
+	background: #c4c4c4;
 	color: white;
 	border-radius: 60px;
 	display: flex;
@@ -969,5 +818,9 @@ input[type="file"]:hover::before {
 	height: 180px;
 	margin-top: 0;
 	margin-bottom: 15px;
-	
+}
+
+.modalCat {
+	border-radius: 5px;
+	margin-bottom: 30px;
 }
