--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -174,28 +174,31 @@ h1>span {
 	flex-direction: row-reverse;
 	gap: 20px;
 	margin: 40px;
-
-	#myBtn {
-		background: #fff;
-		border: none;
-		margin-top: 5px;
-	}
-
-	.fa-pen-to-square {
-		font-size: 10px;
-		margin-right: 1vh;
-	}
 }
+
+.myBtn {
+	border: none;
+	margin-top: 5px;
+	cursor: pointer;
+	width: 100px;
+	height: 25px;
+}
+
+.fa-pen-to-square {
+	font-size: 16px;
+	margin-right: 2vh;
+}
+
 
 .myBtn {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: row-reverse;
-	
-	width: 100px;
-	height: 35px;
-	cursor: pointer;
+	margin-top: 5px;
+	font-size: 15px;
+	background: #fff;
+
 }
 
 h2 {
@@ -333,11 +336,12 @@ a:hover {
 
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
+	margin-bottom: 0.5em;
 }
 
 .gallery {
 	width: 100%;
+	margin-top: 40px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
@@ -491,11 +495,7 @@ footer nav ul {
 	margin: 4px;
 }
 
-#myBtn {
-	width: 100px;
-	height: 25px;
-	cursor: pointer;
-}
+
 
 /* Modal Content */
 .modal-content {
@@ -709,7 +709,7 @@ input[type="file"]:hover::before {
 	align-items: center;
 	justify-content: center;
 	margin-bottom: 0px;
-	cursor: pointer;
+
 }
 
 .newImgInModal {
@@ -724,7 +724,7 @@ input[type="file"]:hover::before {
 	width: auto;
 	height: 180px;
 	margin-top: 0;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 }
 
 .modalCat {
