--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -438,8 +438,10 @@ footer nav ul {
 }
 
 /* The Modal (background) */
-.modal {
+.modals {
 	display: none;
+	justify-content: center;
+	align-items: center;
 	position: fixed;
 	z-index: 1;
 	padding-top: 60px;
@@ -452,15 +454,48 @@ footer nav ul {
 	background-color: rgba(0, 0, 0, 0.4);
 }
 
+
+
+
+
 #galleryModale {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-column-gap: 1px;
 	grid-row-gap: 15px;
 	margin-bottom: 40px;
+	min-height: 50px;
 	max-width: 500px;
 	justify-items: center;
-	align-items: center
+	align-items: center;
+	border: 1px solid #0f0404;
+
+}
+
+.worksItemModal {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	position: relative;
+	border: 1px solid #0f0404;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.worksItemModal .spanTrashh {
+	position: absolute;
+	color: white;
+	background: black;
+	font-size: 8px;
+	cursor: pointer;
+	padding: 2px;
+	margin-top: 9px;
+	margin-left: 50px;
+}
+
+.worksItemModal  .img {
+	width: 75px;
+	object-fit: cover;
 }
 
 #galleryModale .figureModal {
@@ -474,19 +509,19 @@ footer nav ul {
 	opacity: 0.4;
 }
 
-#galleryModale span {
+#galleryModale .spanTrash {
 	position: absolute;
 	color: white;
 	background: black;
 	font-size: 8px;
-	margin-left: 62px;
 	margin-top: 9px;
 	padding: 2px;
 	cursor: pointer;
+
 }
 
 .fa-trash-can {
-	font-size: 10px;
+	font-size: 15px;
 	cursor: pointer;
 }
 
@@ -502,23 +537,15 @@ footer nav ul {
 	margin: auto;
 	padding: 30px 60px;
 	top: 0;
-	width: 100%;
+	width: auto;
+	min-width: 450px;
 	height: auto;
 	min-height: 350px;
+	border: 1px solid #0f0404;
+	background-color: #fefefe;
 }
 
 /* Parti modale ajout photo*/
-.addImgModale {
-	background: #E8F1F6;
-	width: auto;
-	max-width: 420px;
-	height: 169px;
-	max-height: 650px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-evenly;
-}
 
 .classTitleCat {
 	margin-top: 20px;
@@ -617,12 +644,18 @@ hr .elementHr {
 	font-weight: 900;
 }
 
+.modal-content span {
+	color: white;
+	color: #0f0404;
+	padding: 2px;
+	cursor: pointer;
+}
+.divSpanModal {
+	display: flex;
+	justify-content: flex-end;
+}
 .close-btn {
-	font-size: 1.6rem;
-	position: absolute;
-	top: 0px;
-	right: 15px;
-	margin: 0;
+	font-size: 2rem;
 }
 
 .back-btn {
